# jaxoplanet

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: python.yml  tests.yml
docs/: api.md  commonissues.md  conf.py  conventions.ipynb  guide.md  index.md  install.md  installation.md  troubleshooting.md  tutorials.md  why.md
docs/_autoapi_templates/: index.rst
docs/api/: core.rst  index.rst  light_curves.rst  orbits.rst  units.rst
docs/starry/summary/: jaxoplanet.experimental.starry.ylm.Ylm.rst
docs/tutorials/: Setting_up_an_Orbit.ipynb  about.ipynb  autodiff.ipynb  bpic.ipynb  core-from-scratch.ipynb  data-and-models.ipynb  exposure_time_integration.ipynb  getting-started.ipynb  introduction-to-jax.ipynb  jaxoplanet-from-scratch.ipynb  lc_kink.ipynb  mw_transit.ipynb  orbits.ipynb  phase-curve.ipynb  precision.ipynb  quickstart.ipynb  relative-astrometry-rv-bpic.ipynb  relative-astrometry.ipynb  rossiter.ipynb  rv.ipynb  starry.ipynb  transit.ipynb  ttv.ipynb  units.ipynb
src/exo4jax/: __init__.py  core.py  light_curves.py  ops.py  orbits.py  test_utils.py
src/exo4jax/_src/: kepler.py  keplerian.py  light_curves.py  orbit_proto.py  proto.py  quad.py  transit.py  types.py
src/exo4jax/_src/core/: kepler.py  limb_dark.py
src/exo4jax/_src/experimental/: starry.py
src/exo4jax/_src/experimental/starry/: __init__.py  basis.py  limb_dark.py  solution.py
src/exo4jax/ops/: __init__.py  limbdark.py  starry.py
src/exo4jax/orbits/: keplerian.py
src/exoplanet_jax/: __init__.py
src/exoplanet_jax/ops/: __init__.py  cel.py  kepler.py  limbdark.py
src/jaxoplanet/: __init__.py  constants.py  core.py  exposure_time.py  light_curves.py  object_stack.py  orbits.py  proto.py  test_utils.py  types.py  utils.py
src/jaxoplanet/_src/: keplerian.py  light_curves.py  proto.py  transit.py
src/jaxoplanet/_src/core/: kepler.py  limb_dark.py  quad.py
src/jaxoplanet/_src/experimental/starry/: __init__.py  basis.py  rotation.py  solution.py  utils.py
src/jaxoplanet/core/: __init__.py  cel.py  kepler.py  limb_dark.py  power_two.py  quad.py
src/jaxoplanet/experimental/: __init__.py  limb_dark_poly_coeffs.py
src/jaxoplanet/experimental/starry/: __init__.py  basis.py  cel.py  closed_form.py  features.py  flux.py  light_curves.py  maps.py  orbit.py  pijk.py  render.py  rotation.py  s2fft_rotation.py  solution.py  solution_closed_form.py  star.py  surface.py  utils.py  visualization.py  wigner.py  wigner3j.py  ylm.py
src/jaxoplanet/experimental/starry/mpcore/: basis.py  flux.py  rotation.py  solution.py  utils.py
src/jaxoplanet/experimental/starry/multiprecision/: basis.py  flux.py  precision.py  rotation.py  solution.py  utils.py
src/jaxoplanet/light_curves/: __init__.py  emission.py  exposure_time.py  interpolate.py  limb_dark.py  power_two.py  transforms.py  types.py  utils.py
src/jaxoplanet/orbits/: __init__.py  keplerian.py  transit.py  ttv.py
src/jaxoplanet/starry/: __init__.py  doppler.py  light_curves.py  orbit.py  rotation copy.py  s2fft_rotation copy.py  surface.py  surface_is_physical.py  system_observable.py  utils.py  visualization.py  ylm.py
src/jaxoplanet/starry/core/: basis.py  polynomials.py  rotation.py  s2fft_rotation.py  solution.py
src/jaxoplanet/starry/multiprecision/: __init__.py  basis.py  flux.py  precision.py  rotation.py  solution.py  utils.py
src/jaxoplanet/units/: __init__.py  astro_constants_and_units.txt  decorator.py  field.py  registry.py
tests/: keplerian_test.py  light_curves_test.py  object_stack_test.py  ops_test.py  orbits_test.py  units_test.py
tests/core/: kepler_test.py  limb_dark_test.py  quad_test.py
tests/experimental/: calc_poly_coeff_test.py  spot_test.py  starry_test.py
tests/experimental/starry/: basis_test.py  cel_test.py  flux_test.py  light_curve_test.py  limb_dark_test.py  pijk_test.py  rotation_test.py  solution_test.py  spot_test.py  vis_test.py  wigner_test.py  ylm_test.py
tests/light_curves/: limb_dark_light_curve_test.py  limb_dark_test.py  transforms_test.py  transit_test.py  utils_test.py
tests/ops/: ellip.h  limbdark.cpp  limbdark.h  test_cel.py  test_kepler.py  test_limbdark.py  test_quad.py  test_starry.py
tests/orbits/: keplerian_test.py
tests/precision/: test_basis.py  test_flux.py  test_solution.py
tests/starry/: light_curve_test.py  multiprecision_test.py  radial_velocity_test.py  spot_test.py  surface_is_physical_test.py  vis_test.py  ylm_test.py
tests/starry/core/: basis_test.py  pijk_test.py  rotation_test.py  solution_test.py
tests/test_ops/: test_kepler.py
