[project]
name = "jaxoplanet"
description = "Probabilistic models for exoplanet inference in JAX"
authors = [{ name = "Dan Foreman-Mackey", email = "foreman.mackey@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = ["jax", "jaxlib", "jpu"]

[project.urls]
"Homepage" = "https://jax.exoplanet.codes"
"Source" = "https://github.com/exoplanet-dev/jaxoplanet"
"Bug Tracker" = "https://github.com/exoplanet-dev/jaxoplanet/issues"

[project.optional-dependencies]
dev = ["nox", "ruff", "black", "pre-commit", "pytest", "sympy"]
test = ["pytest", "pytest-xdist", "exoplanet-core", "batman-package"]
test-math = ["sympy"]
comparison = ["starry", "numpy<1.22", "tqdm"]
docs = [
    "matplotlib",
    "arviz",
    "corner",
    "numpyro",
    "numpyro-ext",
    "jaxopt",
    "myst-nb",
    "sphinx-book-theme",
    "sphinx-design",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/jaxoplanet/jaxoplanet_version.py"

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["F", "I", "E", "W", "YTT", "B", "Q", "PLE", "PLR", "PLW", "UP"]
ignore = ["PLR0912", "PLR0913"]
exclude = []

[tool.ruff.isort]
known-first-party = ["jaxoplanet"]
combine-as-imports = true
