[project]
name = "jaxoplanet"
description = "Probabilistic models for exoplanet inference in JAX"
authors = [{ name = "Dan Foreman-Mackey", email = "foreman.mackey@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = ["jax", "jaxlib", "jpu>=0.0.2", "equinox", "pint", "jax<=0.4.31"]

[project.urls]
"Homepage" = "https://jax.exoplanet.codes"
"Source" = "https://github.com/exoplanet-dev/jaxoplanet"
"Bug Tracker" = "https://github.com/exoplanet-dev/jaxoplanet/issues"

[project.optional-dependencies]
dev = [
    "nox",
    "ruff",
    "black",
    "pre-commit",
    "pytest",
    "sympy",
    "mpmath",
    "gmpy2",
]
test = ["pytest", "pytest-xdist", "exoplanet-core", "batman-package"]
test-math = ["mpmath", "gmpy2"]
comparison = ["starry", "numpy<1.22", "tqdm", "xarray<2023.10.0"]
docs = [
    "matplotlib",
    "arviz",
    "corner",
    "numpyro",
    "numpyro-ext",
    "jaxopt",
    "myst-nb",
    "sphinx-book-theme",
    "sphinx-design",
    "sphinx-autoapi<3.2.0",
    "ipywidgets",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/jaxoplanet/jaxoplanet_version.py"

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.ruff]
line-length = 89
target-version = "py310"

[tool.ruff.lint]
select = ["F", "I", "E", "W", "YTT", "B", "Q", "PLE", "PLR", "PLW", "UP"]
ignore = [
    "B023",    # Allow using global variables in lambdas
    "E741",    # Allow ambiguous variable names (e.g. "l" in starry)
    "PLR0912", # Allow many branches
    "PLR0913", # Allow many arguments in function call
    "PLR0915", # Allow many statements
    "PLR2004", # Allow magic numbers in comparisons
]
# exclude = []

[tool.ruff.lint.isort]
known-first-party = ["jaxoplanet"]
combine-as-imports = true
